Update and rename boas_praticas.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Boas Práticas de Fabricação de Alimentos</title>
-  <link rel="stylesheet" href="boas_praticas.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <!-- Botões de Acessibilidade no topo -->
@@ -91,6 +91,6 @@
     <a href="#formulario" class="nav-icon" title="Formulário">📝</a>
   </nav>
 
-  <script src="boas_praticas.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
