--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Boas Práticas de Fabricação de Alimentos</title>
+  <title>Boas Práticas de Fabricação</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,11 +15,23 @@
 
   <!-- Cabeçalho -->
   <header>
-    <h1>🏭 Boas Práticas de Fabricação de Alimentos</h1>
+    <h1>🏭 Boas Práticas de Fabricação - BPF</h1>
   </header>
 
   <!-- Conteúdo Principal -->
   <main id="content">
+
+    <section>
+      <p><strong>Regras importantes para garantir segurança:</strong></p>
+      <ul>
+        <li>Consuma alimentos e bebidas somente nos locais designados.</li>
+        <li>Não use adereços como alianças, brincos, relógios, etc., nas áreas produtivas.</li>
+        <li>Mantenha as superfícies de equipamentos limpas e sem resíduos.</li>
+        <li>Garrafas que tombam na esteira devem ser destinadas à re-lavagem.</li>
+        <li>Mantenha as portas sempre fechadas e respeite o controle de acesso.</li>
+      </ul>
+    </section>
+    
     <section>
       <h2>Garantindo Qualidade e Segurança nos Refrigerantes</h2>
       <p>
@@ -74,14 +86,34 @@
       </ul>
     </section>
 
-    <section>
-      <h2>🍶 Produzir um Alimento é Responsabilidade de Todos</h2>
+ <section>
+      <h2>🛡️ Controle de Pragas</h2>
       <p>
-        Ao seguir as Boas Práticas de Fabricação, estamos cuidando da saúde do consumidor e garantindo a excelência do produto. Cada detalhe, desde a <strong>higiene pessoal</strong> até o controle de processos, faz diferença.
+        O CONTROLE DE PRAGAS é uma parte essencial das boas práticas de fabricação no processamento de alimentos do ponto de vista higiênico, econômico e regulatório. Insetos vivos ou mortos podem transportar uma ampla gama de microrganismos causadores de doenças, incluindo bactérias, vírus, protozoários e helmintos que podem causar danos aos consumidores e funcionários de empresas que processam e manipulam alimentos.
       </p>
-      <p><strong>Com dedicação e atenção, continuamos a produzir refrigerantes de alta qualidade, garantindo a confiança e a satisfação de nossos consumidores.</strong></p>
+      <p>
+        Eles também podem causar contaminação física de ingredientes e produtos processados com: excrementos, pelos e penas, partes do corpo.
+      </p>
+    </section>
+
+    <section>
+      <h2>🔍 APPCC (Análise de Perigos e Pontos Críticos de Controle)</h2>
+      <p>
+        O APPCC, ou HACCP em inglês, é uma abordagem preventiva sistemática para a segurança de alimentos que se concentra na identificação dos pontos críticos de controle (PCCs) onde esses perigos podem ser controlados ou eliminados, garantindo um nível consistente de segurança nos produtos.
+      </p>
+      <p>
+        É um sistema que aborda a segurança de alimentos através da análise e controle dos riscos físicos, químicos e biológicos, desde a produção da matéria-prima, suprimento e manuseio até fabricação, distribuição e consumo do produto acabado.
+      </p>
+    </section>
+
+    <section>
+      <h2>📱 ROQSE</h2>
+      <p>
+        Ao encontrar qualquer irregularidade, você pode sempre abrir um <strong>ROQSE</strong> através dos QR codes distribuídos pelas áreas ou comunicar seu líder.
+      </p>
     </section>
   </main>
+
 
 <!-- Menu Inferior Fixo -->
 <nav class="menu">
